# backend/src/routers/auth.routes.js
@@ -1,8 +1,11 @@
 import express from 'express';
+import { registerDefinition } from 'swaggiffy';
 const authRoute = express.Router();
 
 import { login } from '../controllers/user.controller.js'
 
 authRoute.post('/', login);
+
+registerDefinition(authRoute, {tags: 'Auth', basePath: '/api/v1/auth', mappedSchema: 'Auth'});
 
 export default authRoute;
